Transfered cities loc.

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -20,10 +20,10 @@
  STATE_19:0 "STATE_19"
  STATE_20:0 "STATE_20"
  STATE_21:0 "STATE_21"
- STATE_22:0 "STATE_22"
- STATE_23:0 "STATE_23"
- STATE_24:0 "STATE_24"
- STATE_25:0 "STATE_25"
+ STATE_22:0 "Eldoran"
+ STATE_23:0 "Boltaire"
+ STATE_24:0 "Southern Cross"
+ STATE_25:0 "Starfall"
  STATE_26:0 "STATE_26"
  STATE_27:0 "STATE_27"
  STATE_28:0 "STATE_28"
@@ -766,7 +766,7 @@
  STATE_765:0 "STATE_765"
  STATE_766:0 "STATE_766"
  STATE_767:0 "STATE_767"
- STATE_768:0 "STATE_768"
+ STATE_768:0 "Severokholm"
  STATE_769:0 "STATE_769"
  STATE_770:0 "STATE_770"
  STATE_771:0 "STATE_771"
@@ -775,35 +775,35 @@
  STATE_774:0 "STATE_774"
  STATE_775:0 "STATE_775"
  STATE_776:0 "STATE_776"
- STATE_777:0 "STATE_777"
+ STATE_777:0 "St. Petershoof"
  STATE_778:0 "STATE_778"
  STATE_779:0 "STATE_779"
  STATE_780:0 "STATE_780"
  STATE_781:0 "STATE_781"
  STATE_782:0 "STATE_782"
  STATE_783:0 "STATE_783"
- STATE_784:0 "STATE_784"
+ STATE_784:0 "Trottingham"
  STATE_785:0 "STATE_785"
- STATE_786:0 "STATE_786"
- STATE_787:0 "STATE_787"
+ STATE_786:0 "Azkaban"
+ STATE_787:0 "Stavropon"
  STATE_788:0 "STATE_788"
  STATE_789:0 "STATE_789"
- STATE_790:0 "STATE_790"
- STATE_791:0 "STATE_791"
+ STATE_790:0 "Ravenskoye"
+ STATE_791:0 "Sladkiy"
  STATE_792:0 "STATE_792"
- STATE_793:0 "STATE_793"
+ STATE_793:0 "Konzan"
  STATE_794:0 "STATE_794"
  STATE_795:0 "STATE_795"
  STATE_796:0 "STATE_796"
  STATE_797:0 "STATE_797"
  STATE_798:0 "STATE_798"
  STATE_799:0 "STATE_799"
- STATE_800:0 "STATE_800"
+ STATE_800:0 "Severgrad"
  STATE_801:0 "STATE_801"
  STATE_802:0 "STATE_802"
  STATE_803:0 "STATE_803"
- STATE_804:0 "STATE_804"
- STATE_805:0 "STATE_805"
+ STATE_804:0 "Zayatsk"
+ STATE_805:0 "St. Altidyisk"
  STATE_806:0 "STATE_806"
  STATE_807:0 "STATE_807"
  STATE_808:0 "STATE_808"
@@ -819,28 +819,28 @@
  STATE_818:0 "STATE_818"
  STATE_819:0 "STATE_819"
  STATE_820:0 "STATE_820"
- STATE_821:0 "STATE_821"
- STATE_822:0 "STATE_822"
+ STATE_821:0 "Sovyenok"
+ STATE_822:0 "Starlight's Town"
  STATE_823:0 "STATE_823"
  STATE_824:0 "STATE_824"
  STATE_825:0 "STATE_825"
  STATE_826:0 "STATE_826"
  STATE_827:0 "STATE_827"
- STATE_828:0 "STATE_828"
+ STATE_828:0 "Village Up North"
  STATE_829:0 "STATE_829"
  STATE_830:0 "STATE_830"
  STATE_831:0 "STATE_831"
  STATE_832:0 "STATE_832"
  STATE_833:0 "STATE_833"
  STATE_834:0 "STATE_834"
- STATE_835:0 "STATE_835"
+ STATE_835:0 "Haukhamn"
  STATE_836:0 "STATE_836"
  STATE_837:0 "STATE_837"
  STATE_838:0 "STATE_838"
  STATE_839:0 "STATE_839"
- STATE_840:0 "STATE_840"
+ STATE_840:0 "Winterhold"
  STATE_841:0 "STATE_841"
- STATE_842:0 "STATE_842"
+ STATE_842:0 "World's End"
  STATE_843:0 "STATE_843"
  STATE_844:0 "STATE_844"
  STATE_845:0 "STATE_845"
@@ -928,7 +928,7 @@
  STATE_927:0 "STATE_927"
  STATE_928:0 "STATE_928"
  STATE_929:0 "STATE_929"
- STATE_930:0 "STATE_930"
+ STATE_930:0 "Hoorornd"
  STATE_931:0 "STATE_931"
  STATE_932:0 "STATE_932"
  STATE_933:0 "STATE_933"
@@ -939,21 +939,21 @@
  STATE_938:0 "STATE_938"
  STATE_939:0 "STATE_939"
  STATE_940:0 "STATE_940"
- STATE_941:0 "STATE_941"
+ STATE_941:0 "Nieuw Mirabelle"
  STATE_942:0 "STATE_942"
  STATE_943:0 "STATE_943"
  STATE_944:0 "STATE_944"
  STATE_945:0 "STATE_945"
  STATE_946:0 "STATE_946"
  STATE_947:0 "STATE_947"
- STATE_948:0 "STATE_948"
+ STATE_948:0 "Nouveau Aquila"
  STATE_949:0 "STATE_949"
- STATE_950:0 "STATE_950"
+ STATE_950:0 "Zerkshed Skäll"
  STATE_951:0 "STATE_951"
  STATE_952:0 "STATE_952"
  STATE_953:0 "STATE_953"
  STATE_954:0 "STATE_954"
- STATE_955:0 "STATE_955"
+ STATE_955:0 "Ny Winghagen"
  STATE_956:0 "STATE_956"
  STATE_957:0 "STATE_957"
  STATE_958:0 "STATE_958"
@@ -968,13 +968,13 @@
  STATE_967:0 "STATE_967"
  STATE_968:0 "STATE_968"
  STATE_969:0 "STATE_969"
- STATE_970:0 "STATE_970"
+ STATE_970:0 "Weter"
  STATE_971:0 "STATE_971"
  STATE_972:0 "STATE_972"
  STATE_973:0 "STATE_973"
  STATE_974:0 "STATE_974"
  STATE_975:0 "STATE_975"
- STATE_976:0 "STATE_976"
+ STATE_976:0 "Boreasfjord"
  STATE_977:0 "STATE_977"
  STATE_978:0 "STATE_978"
  STATE_979:0 "STATE_979"
@@ -988,7 +988,7 @@
  STATE_987:0 "STATE_987"
  STATE_988:0 "STATE_988"
  STATE_989:0 "STATE_989"
- STATE_990:0 "STATE_990"
+ STATE_990:0 "Groenstein"
  STATE_991:0 "STATE_991"
  STATE_992:0 "STATE_992"
  STATE_993:0 "STATE_993"
@@ -998,7 +998,7 @@
  STATE_997:0 "STATE_997"
  STATE_998:0 "STATE_998"
  STATE_999:0 "STATE_999"
- STATE_1000:0 "STATE_1000"
+ STATE_1000:0 "Dachaigh"
  STATE_1001:0 "STATE_1001"
  STATE_1002:0 "STATE_1002"
  STATE_1003:0 "STATE_1003"
@@ -1013,7 +1013,7 @@
  STATE_1012:0 "STATE_1012"
  STATE_1013:0 "STATE_1013"
  STATE_1014:0 "STATE_1014"
- STATE_1015:0 "STATE_1015"
+ STATE_1015:0 "Ingstad"
  STATE_1016:0 "STATE_1016"
  STATE_1017:0 "STATE_1017"
  STATE_1018:0 "STATE_1018"
@@ -1048,7 +1048,7 @@
  STATE_1047:0 "STATE_1047"
  STATE_1048:0 "STATE_1048"
  STATE_1049:0 "STATE_1049"
- STATE_1050:0 "STATE_1050"
+ STATE_1050:0 "Sverdrup"
  STATE_1051:0 "STATE_1051"
  STATE_1052:0 "STATE_1052"
  STATE_1053:0 "STATE_1053"
@@ -1073,7 +1073,7 @@
  STATE_1072:0 "STATE_1072"
  STATE_1073:0 "STATE_1073"
  STATE_1074:0 "STATE_1074"
- STATE_1075:0 "STATE_1075"
+ STATE_1075:0 "Amundsen"
  STATE_1076:0 "STATE_1076"
  STATE_1077:0 "STATE_1077"
  STATE_1078:0 "STATE_1078"
@@ -1081,7 +1081,7 @@
  STATE_1080:0 "STATE_1080"
  STATE_1081:0 "STATE_1081"
  STATE_1082:0 "STATE_1082"
- STATE_1083:0 "STATE_1083"
+ STATE_1083:0 "Nansen"
  STATE_1084:0 "STATE_1084"
  STATE_1085:0 "STATE_1085"
  STATE_1086:0 "STATE_1086"
@@ -1172,7 +1172,7 @@
  STATE_1171:0 "STATE_1171"
  STATE_1172:0 "STATE_1172"
  STATE_1173:0 "STATE_1173"
- STATE_1174:0 "STATE_1174"
+ STATE_1174:0 "Yakistown"
  STATE_1175:0 "STATE_1175"
  STATE_1176:0 "STATE_1176"
  STATE_1177:0 "STATE_1177"
@@ -1183,12 +1183,12 @@
  STATE_1182:0 "STATE_1182"
  STATE_1183:0 "STATE_1183"
  STATE_1184:0 "STATE_1184"
- STATE_1185:0 "STATE_1185"
+ STATE_1185:0 "Saihandale"
  STATE_1186:0 "STATE_1186"
  STATE_1187:0 "STATE_1187"
  STATE_1188:0 "STATE_1188"
  STATE_1189:0 "STATE_1189"
- STATE_1190:0 "STATE_1190"
+ STATE_1190:0 "Karsakag"
  STATE_1191:0 "STATE_1191"
  STATE_1192:0 "STATE_1192"
  STATE_1193:0 "STATE_1193"
@@ -1198,7 +1198,7 @@
  STATE_1197:0 "STATE_1197"
  STATE_1198:0 "STATE_1198"
  STATE_1199:0 "STATE_1199"
- STATE_1200:0 "STATE_1200"
+ STATE_1200:0 "Khereh Davsag"
  STATE_1201:0 "STATE_1201"
  STATE_1202:0 "STATE_1202"
  STATE_1203:0 "STATE_1203"
@@ -1206,19 +1206,19 @@
  STATE_1205:0 "STATE_1205"
  STATE_1206:0 "STATE_1206"
  STATE_1207:0 "STATE_1207"
- STATE_1208:0 "STATE_1208"
+ STATE_1208:0 "Gol Güür"
  STATE_1209:0 "STATE_1209"
- STATE_1210:0 "STATE_1210"
+ STATE_1210:0 "Tuuraikhan"
  STATE_1211:0 "STATE_1211"
  STATE_1212:0 "STATE_1212"
- STATE_1213:0 "STATE_1213"
+ STATE_1213:0 "Nokhorsag Oi"
  STATE_1214:0 "STATE_1214"
  STATE_1215:0 "STATE_1215"
  STATE_1216:0 "STATE_1216"
  STATE_1217:0 "STATE_1217"
  STATE_1218:0 "STATE_1218"
  STATE_1219:0 "STATE_1219"
- STATE_1220:0 "STATE_1220"
+ STATE_1220:0 "Tsasbaatar"
  STATE_1221:0 "STATE_1221"
  STATE_1222:0 "STATE_1222"
  STATE_1223:0 "STATE_1223"
@@ -1228,10 +1228,10 @@
  STATE_1227:0 "STATE_1227"
  STATE_1228:0 "STATE_1228"
  STATE_1229:0 "STATE_1229"
- STATE_1230:0 "STATE_1230"
+ STATE_1230:0 "Bara'dur"
  STATE_1231:0 "STATE_1231"
- STATE_1232:0 "STATE_1232"
- STATE_1233:0 "STATE_1233"
+ STATE_1232:0 "Sarlag Khot"
+ STATE_1233:0 "Saihan Tolgod"
  STATE_1234:0 "STATE_1234"
  STATE_1235:0 "STATE_1235"
  STATE_1236:0 "STATE_1236"
@@ -1241,7 +1241,7 @@
  STATE_1240:0 "STATE_1240"
  STATE_1241:0 "STATE_1241"
  STATE_1242:0 "STATE_1242"
- STATE_1243:0 "STATE_1243"
+ STATE_1243:0 "Modnihendi"
  STATE_1244:0 "STATE_1244"
  STATE_1245:0 "STATE_1245"
  STATE_1246:0 "STATE_1246"
@@ -1252,10 +1252,10 @@
  STATE_1251:0 "STATE_1251"
  STATE_1252:0 "STATE_1252"
  STATE_1253:0 "STATE_1253"
- STATE_1254:0 "STATE_1254"
+ STATE_1254:0 "Mörön"
  STATE_1255:0 "STATE_1255"
- STATE_1256:0 "STATE_1256"
- STATE_1257:0 "STATE_1257"
+ STATE_1256:0 "Oin Shiltgeen"
+ STATE_1257:0 "Kluv Khot"
  STATE_1258:0 "STATE_1258"
  STATE_1259:0 "STATE_1259"
  STATE_1260:0 "STATE_1260"
@@ -1274,13 +1274,13 @@
  STATE_1273:0 "STATE_1273"
  STATE_1274:0 "STATE_1274"
  STATE_1275:0 "STATE_1275"
- STATE_1276:0 "STATE_1276"
+ STATE_1276:0 "Bounnois"
  STATE_1277:0 "STATE_1277"
  STATE_1278:0 "STATE_1278"
  STATE_1279:0 "STATE_1279"
- STATE_1280:0 "STATE_1280"
- STATE_1281:0 "STATE_1281"
- STATE_1282:0 "STATE_1282"
+ STATE_1280:0 "Guidonuovo"
+ STATE_1281:0 "Frosthill"
+ STATE_1282:0 "Federstadt"
  STATE_1283:0 "STATE_1283"
  STATE_1284:0 "STATE_1284"
  STATE_1285:0 "STATE_1285"
@@ -1299,7 +1299,7 @@
  STATE_1298:0 "STATE_1298"
  STATE_1299:0 "STATE_1299"
  STATE_1300:0 "STATE_1300"
- STATE_1301:0 "STATE_1301"
+ STATE_1301:0 "Mathair Fearainn"
  STATE_1302:0 "STATE_1302"
  STATE_1303:0 "STATE_1303"
  STATE_1304:0 "STATE_1304"
@@ -1365,7 +1365,7 @@
  STATE_1364:0 "STATE_1364"
  STATE_1365:0 "STATE_1365"
  STATE_1366:0 "STATE_1366"
- STATE_1367:0 "STATE_1367"
+ STATE_1367:0 "Soryth"
  STATE_1368:0 "STATE_1368"
  STATE_1369:0 "STATE_1369"
  STATE_1370:0 "STATE_1370"
@@ -1378,7 +1378,7 @@
  STATE_1377:0 "STATE_1377"
  STATE_1378:0 "STATE_1378"
  STATE_1379:0 "STATE_1379"
- STATE_1380:0 "STATE_1380"
+ STATE_1380:0 "Queen's Island"
  STATE_1381:0 "STATE_1381"
  STATE_1382:0 "STATE_1382"
  STATE_1383:0 "STATE_1383"
@@ -1388,7 +1388,7 @@
  STATE_1387:0 "STATE_1387"
  STATE_1388:0 "STATE_1388"
  STATE_1389:0 "STATE_1389"
- STATE_1390:0 "STATE_1390"
+ STATE_1390:0 "Gorak"
  STATE_1391:0 "STATE_1391"
  STATE_1392:0 "STATE_1392"
  STATE_1393:0 "STATE_1393"
@@ -1408,7 +1408,7 @@
  STATE_1407:0 "STATE_1407"
  STATE_1408:0 "STATE_1408"
  STATE_1409:0 "STATE_1409"
- STATE_1410:0 "STATE_1410"
+ STATE_1410:0 "Antax"
  STATE_1411:0 "STATE_1411"
  STATE_1412:0 "STATE_1412"
  STATE_1413:0 "STATE_1413"
@@ -1423,19 +1423,19 @@
  STATE_1422:0 "STATE_1422"
  STATE_1423:0 "STATE_1423"
  STATE_1424:0 "STATE_1424"
- STATE_1425:0 "STATE_1425"
+ STATE_1425:0 "Aglossata"
  STATE_1426:0 "STATE_1426"
  STATE_1427:0 "STATE_1427"
  STATE_1428:0 "STATE_1428"
  STATE_1429:0 "STATE_1429"
  STATE_1430:0 "STATE_1430"
  STATE_1431:0 "STATE_1431"
- STATE_1432:0 "STATE_1432"
+ STATE_1432:0 "Ditrysium"
  STATE_1433:0 "STATE_1433"
  STATE_1434:0 "STATE_1434"
  STATE_1435:0 "STATE_1435"
  STATE_1436:0 "STATE_1436"
- STATE_1437:0 "STATE_1437"
+ STATE_1437:0 "Neverwarm Town"
  STATE_1438:0 "STATE_1438"
  STATE_1439:0 "STATE_1439"
  STATE_1440:0 "STATE_1440"
@@ -1445,7 +1445,7 @@
  STATE_1444:0 "STATE_1444"
  STATE_1445:0 "STATE_1445"
  STATE_1446:0 "STATE_1446"
- STATE_1447:0 "STATE_1447"
+ STATE_1447:0 "Ishamn"
  STATE_1448:0 "STATE_1448"
  STATE_1449:0 "STATE_1449"
  STATE_1450:0 "STATE_1450"
@@ -1455,7 +1455,7 @@
  STATE_1454:0 "STATE_1454"
  STATE_1455:0 "STATE_1455"
  STATE_1456:0 "STATE_1456"
- STATE_1457:0 "STATE_1457"
+ STATE_1457:0 "Lyctida"
  STATE_1458:0 "STATE_1458"
  STATE_1459:0 "STATE_1459"
  STATE_1460:0 "STATE_1460"
@@ -1471,7 +1471,7 @@
  STATE_1470:0 "STATE_1470"
  STATE_1471:0 "STATE_1471"
  STATE_1472:0 "STATE_1472"
- STATE_1473:0 "STATE_1473"
+ STATE_1473:0 "Kladisium"
  STATE_1474:0 "STATE_1474"
  STATE_1475:0 "STATE_1475"
  STATE_1476:0 "STATE_1476"
@@ -1483,12 +1483,12 @@
  STATE_1482:0 "STATE_1482"
  STATE_1483:0 "STATE_1483"
  STATE_1484:0 "STATE_1484"
- STATE_1485:0 "STATE_1485"
+ STATE_1485:0 "Gardis"
  STATE_1486:0 "STATE_1486"
  STATE_1487:0 "STATE_1487"
- STATE_1488:0 "STATE_1488"
+ STATE_1488:0 "Vesalipolis"
  STATE_1489:0 "STATE_1489"
- STATE_1490:0 "STATE_1490"
+ STATE_1490:0 "Vraks"
  STATE_1491:0 "STATE_1491"
  STATE_1492:0 "STATE_1492"
  STATE_1493:0 "STATE_1493"
@@ -1500,10 +1500,10 @@
  STATE_1499:0 "STATE_1499"
  STATE_1500:0 "STATE_1500"
  STATE_1501:0 "STATE_1501"
- STATE_1502:0 "STATE_1502"
+ STATE_1502:0 "Volistad"
  STATE_1503:0 "STATE_1503"
  STATE_1504:0 "STATE_1504"
- STATE_1505:0 "STATE_1505"
+ STATE_1505:0 "Sicarus"
  STATE_1506:0 "STATE_1506"
  STATE_1507:0 "STATE_1507"
  STATE_1508:0 "STATE_1508"
@@ -1513,7 +1513,7 @@
  STATE_1512:0 "STATE_1512"
  STATE_1513:0 "STATE_1513"
  STATE_1514:0 "STATE_1514"
- STATE_1515:0 "STATE_1515"
+ STATE_1515:0 "Vaverfront"
  STATE_1516:0 "STATE_1516"
  STATE_1517:0 "STATE_1517"
  STATE_1518:0 "STATE_1518"
@@ -1522,27 +1522,27 @@
  STATE_1521:0 "STATE_1521"
  STATE_1522:0 "STATE_1522"
  STATE_1523:0 "STATE_1523"
- STATE_1524:0 "STATE_1524"
+ STATE_1524:0 "Seaddle"
  STATE_1525:0 "STATE_1525"
  STATE_1526:0 "STATE_1526"
  STATE_1527:0 "STATE_1527"
  STATE_1528:0 "STATE_1528"
  STATE_1529:0 "STATE_1529"
- STATE_1530:0 "STATE_1530"
- STATE_1531:0 "STATE_1531"
+ STATE_1530:0 "Östskog"
+ STATE_1531:0 "Kuuvaloranta"
  STATE_1532:0 "STATE_1532"
  STATE_1533:0 "STATE_1533"
  STATE_1534:0 "STATE_1534"
  STATE_1535:0 "STATE_1535"
  STATE_1536:0 "STATE_1536"
- STATE_1537:0 "STATE_1537"
+ STATE_1537:0 "Svenholm"
  STATE_1538:0 "STATE_1538"
  STATE_1539:0 "STATE_1539"
- STATE_1540:0 "STATE_1540"
+ STATE_1540:0 "Heinä"
  STATE_1541:0 "STATE_1541"
  STATE_1542:0 "STATE_1542"
  STATE_1543:0 "STATE_1543"
- STATE_1544:0 "STATE_1544"
+ STATE_1544:0 "Phantine"
  STATE_1545:0 "STATE_1545"
  STATE_1546:0 "STATE_1546"
  STATE_1547:0 "STATE_1547"
@@ -1560,7 +1560,7 @@
  STATE_1559:0 "STATE_1559"
  STATE_1560:0 "STATE_1560"
  STATE_1561:0 "STATE_1561"
- STATE_1562:0 "STATE_1562"
+ STATE_1562:0 "Elksburg"
  STATE_1563:0 "STATE_1563"
  STATE_1564:0 "STATE_1564"
  STATE_1565:0 "STATE_1565"
@@ -1568,11 +1568,11 @@
  STATE_1567:0 "STATE_1567"
  STATE_1568:0 "STATE_1568"
  STATE_1569:0 "STATE_1569"
- STATE_1570:0 "STATE_1570"
- STATE_1571:0 "STATE_1571"
+ STATE_1570:0 "Elders Island"
+ STATE_1571:0 "Öslott"
  STATE_1572:0 "STATE_1572"
  STATE_1573:0 "STATE_1573"
- STATE_1574:0 "STATE_1574"
+ STATE_1574:0 "Härlinghamn"
  STATE_1575:0 "STATE_1575"
  STATE_1576:0 "STATE_1576"
  STATE_1577:0 "STATE_1577"
@@ -1583,27 +1583,27 @@
  STATE_1582:0 "STATE_1582"
  STATE_1583:0 "STATE_1583"
  STATE_1584:0 "STATE_1584"
- STATE_1585:0 "STATE_1585"
+ STATE_1585:0 "Sakara"
  STATE_1586:0 "STATE_1586"
  STATE_1587:0 "STATE_1587"
  STATE_1588:0 "STATE_1588"
  STATE_1589:0 "STATE_1589"
- STATE_1590:0 "STATE_1590"
+ STATE_1590:0 "Valolahti"
  STATE_1591:0 "STATE_1591"
  STATE_1592:0 "STATE_1592"
  STATE_1593:0 "STATE_1593"
  STATE_1594:0 "STATE_1594"
- STATE_1595:0 "STATE_1595"
+ STATE_1595:0 "Kesäpuoli"
  STATE_1596:0 "STATE_1596"
  STATE_1597:0 "STATE_1597"
  STATE_1598:0 "STATE_1598"
  STATE_1599:0 "STATE_1599"
- STATE_1600:0 "STATE_1600"
- STATE_1601:0 "STATE_1601"
+ STATE_1600:0 "Cervus"
+ STATE_1601:0 "Goldenshore"
  STATE_1602:0 "STATE_1602"
  STATE_1603:0 "STATE_1603"
- STATE_1604:0 "STATE_1604"
- STATE_1605:0 "STATE_1605"
+ STATE_1604:0 "Equadoe"
+ STATE_1605:0 "Hirvikaupunki"
  STATE_1606:0 "STATE_1606"
  STATE_1607:0 "STATE_1607"
  STATE_1608:0 "STATE_1608"
@@ -1616,23 +1616,23 @@
  STATE_1615:0 "STATE_1615"
  STATE_1616:0 "STATE_1616"
  STATE_1617:0 "STATE_1617"
- STATE_1618:0 "STATE_1618"
+ STATE_1618:0 "Älgstad"
  STATE_1619:0 "STATE_1619"
- STATE_1620:0 "STATE_1620"
+ STATE_1620:0 "Manty Creek"
  STATE_1621:0 "STATE_1621"
- STATE_1622:0 "STATE_1622"
+ STATE_1622:0 "Hovenhamn"
  STATE_1623:0 "STATE_1623"
  STATE_1624:0 "STATE_1624"
  STATE_1625:0 "STATE_1625"
- STATE_1626:0 "STATE_1626"
+ STATE_1626:0 "Snöflinga"
  STATE_1627:0 "STATE_1627"
  STATE_1628:0 "STATE_1628"
  STATE_1629:0 "STATE_1629"
  STATE_1630:0 "STATE_1630"
  STATE_1631:0 "STATE_1631"
  STATE_1632:0 "STATE_1632"
- STATE_1633:0 "STATE_1633"
+ STATE_1633:0 "Endräkt"
  STATE_1634:0 "STATE_1634"
  STATE_1635:0 "STATE_1635"
- STATE_1636:0 "STATE_1636"
+ STATE_1636:0 "Fluffy Chest"
  STATE_1637:0 "STATE_1637"
