--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -153,7 +153,7 @@
  STATE_152:0 "STATE_152"
  STATE_153:0 "STATE_153"
  STATE_154:0 "STATE_154"
- STATE_155:0 "STATE_155"
+ STATE_155:0 "Canterlot Palace"
  STATE_156:0 "STATE_156"
  STATE_157:0 "STATE_157"
  STATE_158:0 "STATE_158"
