Generating units and buildings. VP for Crystal City

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -5,3 +5,13 @@
  VICTORY_POINTS_13257:0 "Canterlot City"
  VICTORY_POINTS_13211:0 "North Canterlot"
  VICTORY_POINTS_13297:0 "South Canterlot"
+ #Crystal city
+ VICTORY_POINTS_2793:0 "Crystal Castle"
+ VICTORY_POINTS_4342:0 "Crystal City"
+ VICTORY_POINTS_7123:0 "Crystal City"
+ VICTORY_POINTS_10594:0 "Crystal City"
+ VICTORY_POINTS_7855:0 "Crystal City"
+ VICTORY_POINTS_11109:0 "Crystal City Outskirts"
+ VICTORY_POINTS_10929:0 "Crystal City Outskirts"
+ VICTORY_POINTS_11078:0 "Crystal City Outskirts"
+ VICTORY_POINTS_11143:0 "Crystal City Outskirts"
