--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,17 +1,9 @@
 ﻿l_english:
-# Equestian company
-EQS_neutrality:0 "Equestria"
-EQS_neutrality_DEF:0 "Equestria"
-EQS_fascism:0 "Equestrian State"
-EQS_fascism_DEF:0 "The Equestrian State"
-EQS_communism:0 "Socialist Republic of Equestria"
-EQS_communism_DEF:0 "The Socialist Republic of Equestria"
-EQS_democratic:0 "Equestria"
-EQS_democratic_DEF:0 "Equestria"
-EQS_fascism_ADJ:0 "Equestrian"
-EQS_democratic_ADJ:0 "Equestrian"
-EQS_neutrality_ADJ:0 "Equestrian"
-EQS_communism_ADJ:0 "Equestrian"
+
+#####################label
+# Equestian company #
+#####################
+#EQS in replace/tdr_eaw_countries_overrides_l_english.yml
 
 WHN_neutrality:0 "Protectorate Whinnyapolis"
 WHN_neutrality_DEF:0 "Protectorate Whinnyapolis"
@@ -39,23 +31,66 @@ WES_democratic_ADJ:0 "Equestian"
 WES_neutrality_ADJ:0 "Equestian"
 WES_communism_ADJ:0 "Equestian"
 
-# Former Crystal Empire
+#########################label
+# Former Crystal Empire #
+#########################
+#CRY in replace/tdr_eaw_countries_overrides_l_english.yml
 
-CRY_neutrality:0 ""
-CRY_neutrality_DEF:0 ""
-CRY_fascism:0 "Crystal Empire"
-CRY_fascism_DEF:0 "The Crystal Empire"
-CRY_communism:0 ""
-CRY_communism_DEF:0 ""
-CRY_democratic:0 ""
-CRY_democratic_DEF:0 ""
-CRY_fascism_ADJ:0 "Crystal"
-CRY_democratic_ADJ:0 "Crystal"
-CRY_neutrality_ADJ:0 "Crystal"
-CRY_communism_ADJ:0 "Crystal"
+KDW_neutrality:0 "Kaedwen"
+KDW_neutrality_DEF:0 ""
+KDW_fascism:0 ""
+KDW_fascism_DEF:0 ""
+KDW_communism:0 ""
+KDW_communism_DEF:0 ""
+KDW_democratic:0 ""
+KDW_democratic_DEF:0 ""
+KDW_fascism_ADJ:0 ""
+KDW_democratic_ADJ:0 ""
+KDW_neutrality_ADJ:0 ""
+KDW_communism_ADJ:0 ""
 
-# East Equestria
+AED_neutrality:0 "Aedirn"
+AED_neutrality_DEF:0 ""
+AED_fascism:0 ""
+AED_fascism_DEF:0 ""
+AED_communism:0 ""
+AED_communism_DEF:0 ""
+AED_democratic:0 ""
+AED_democratic_DEF:0 ""
+AED_fascism_ADJ:0 ""
+AED_democratic_ADJ:0 ""
+AED_neutrality_ADJ:0 ""
+AED_communism_ADJ:0 ""
 
+DOL_neutrality:0 "Dol Blathanna"
+DOL_neutrality_DEF:0 ""
+DOL_fascism:0 ""
+DOL_fascism_DEF:0 ""
+DOL_communism:0 ""
+DOL_communism_DEF:0 ""
+DOL_democratic:0 ""
+DOL_democratic_DEF:0 ""
+DOL_fascism_ADJ:0 ""
+DOL_democratic_ADJ:0 ""
+DOL_neutrality_ADJ:0 ""
+DOL_communism_ADJ:0 ""
+
+LAR_neutrality:0 "Lyria and Rivia"
+LAR_neutrality_DEF:0 ""
+LAR_fascism:0 ""
+LAR_fascism_DEF:0 ""
+LAR_communism:0 ""
+LAR_communism_DEF:0 ""
+LAR_democratic:0 ""
+LAR_democratic_DEF:0 ""
+LAR_fascism_ADJ:0 ""
+LAR_democratic_ADJ:0 ""
+LAR_neutrality_ADJ:0 ""
+LAR_communism_ADJ:0 ""
+
+##################label
+# East Equestria #
+##################
 SEV_neutrality:0 "Severianskaja Imperija"
 SEV_neutrality_DEF:0 "The Severian Empire"
 SEV_fascism:0 ""
@@ -69,18 +104,7 @@ SEV_democratic_ADJ:0 "Severian"
 SEV_neutrality_ADJ:0 "Severian"
 SEV_communism_ADJ:0 "Severian"
 
-STL_neutrality:0 "Starlight's Town"
-STL_neutrality_DEF:0 "Starlight's Town"
-STL_fascism:0 ""
-STL_fascism_DEF:0 ""
-STL_communism:0 ""
-STL_communism_DEF:0 ""
-STL_democratic:0 ""
-STL_democratic_DEF:0 ""
-STL_fascism_ADJ:0 "Severian"
-STL_democratic_ADJ:0 "Severian"
-STL_neutrality_ADJ:0 "Severian"
-STL_communism_ADJ:0 "Severian"
+#STL in replace/tdr_eaw_countries_overrides_l_english.yml
 
 TRS_neutrality:0 "Trotsylvania"
 TRS_neutrality_DEF:0 "Principality of Trotsylvania"
@@ -95,32 +119,10 @@ TRS_democratic_ADJ:0 "Trotsylvanian"
 TRS_neutrality_ADJ:0 "Trotsylvanian"
 TRS_communism_ADJ:0 "Trotsylvanian"
 
-# West Equestria
-KDW_neutrality:0 "Kaedwen"
-KDW_neutrality_DEF:0 ""
-KDW_fascism:0 ""
-KDW_fascism_DEF:0 ""
-KDW_communism:0 ""
-KDW_communism_DEF:0 ""
-KDW_democratic:0 ""
-KDW_democratic_DEF:0 ""
-KDW_fascism_ADJ:0 ""
-KDW_democratic_ADJ:0 ""
-KDW_neutrality_ADJ:0 ""
-KDW_communism_ADJ:0 ""
-
-ANG_neutrality:0 "Angren"
-ANG_neutrality_DEF:0 ""
-ANG_fascism:0 ""
-ANG_fascism_DEF:0 ""
-ANG_communism:0 ""
-ANG_communism_DEF:0 ""
-ANG_democratic:0 ""
-ANG_democratic_DEF:0 ""
-ANG_fascism_ADJ:0 ""
-ANG_democratic_ADJ:0 ""
-ANG_neutrality_ADJ:0 ""
-ANG_communism_ADJ:0 ""
+##################label
+# West Equestria #
+##################
+#ANG in replace/tdr_eaw_countries_overrides_l_english.yml
 
 VRD_neutrality:0 "Verden"
 VRD_neutrality_DEF:0 ""
@@ -213,19 +215,6 @@ MHK_democratic_ADJ:0 ""
 MHK_neutrality_ADJ:0 ""
 MHK_communism_ADJ:0 ""
 
-LAR_neutrality:0 "Lyria and Rivia"
-LAR_neutrality_DEF:0 ""
-LAR_fascism:0 ""
-LAR_fascism_DEF:0 ""
-LAR_communism:0 ""
-LAR_communism_DEF:0 ""
-LAR_democratic:0 ""
-LAR_democratic_DEF:0 ""
-LAR_fascism_ADJ:0 ""
-LAR_democratic_ADJ:0 ""
-LAR_neutrality_ADJ:0 ""
-LAR_communism_ADJ:0 ""
-
 CID_neutrality:0 "Cidaris"
 CID_neutrality_DEF:0 ""
 CID_fascism:0 ""
@@ -251,19 +240,6 @@ BRG_fascism_ADJ:0 ""
 BRG_democratic_ADJ:0 ""
 BRG_neutrality_ADJ:0 ""
 BRG_communism_ADJ:0 ""
-
-AED_neutrality:0 "Aedirn"
-AED_neutrality_DEF:0 ""
-AED_fascism:0 ""
-AED_fascism_DEF:0 ""
-AED_communism:0 ""
-AED_communism_DEF:0 ""
-AED_democratic:0 ""
-AED_democratic_DEF:0 ""
-AED_fascism_ADJ:0 ""
-AED_democratic_ADJ:0 ""
-AED_neutrality_ADJ:0 ""
-AED_communism_ADJ:0 ""
 
 ELD_neutrality:0 "Ellander"
 ELD_neutrality_DEF:0 ""
@@ -317,60 +293,17 @@ MON_democratic_ADJ:0 ""
 MON_neutrality_ADJ:0 ""
 MON_communism_ADJ:0 ""
 
-DOL_neutrality:0 "Dol Blathanna"
-DOL_neutrality_DEF:0 ""
-DOL_fascism:0 ""
-DOL_fascism_DEF:0 ""
-DOL_communism:0 ""
-DOL_communism_DEF:0 ""
-DOL_democratic:0 ""
-DOL_democratic_DEF:0 ""
-DOL_fascism_ADJ:0 ""
-DOL_democratic_ADJ:0 ""
-DOL_neutrality_ADJ:0 ""
-DOL_communism_ADJ:0 ""
+##############label
+# South-East #
+##############
+#BAL in replace/tdr_eaw_countries_overrides_l_english.yml
+#
+#DRG in replace/tdr_eaw_countries_overrides_l_english.yml
 
-
-# South-East
-BAL_neutrality:0 "Free City of Baltimare"
-BAL_fascism:0 "Baltimare Governorate"
-BAL_communism:0 "Baltimare Republic"
-BAL_democratic:0 "Baltimare Region"
-BAL_neutrality_DEF:0 "The Free City of Baltimare"
-BAL_fascism_DEF:0 "The Governorate of Baltimare"
-BAL_communism_DEF:0 "The Workers' Republic of Baltimare"
-BAL_democratic_DEF:0 "The Baltimare Region"
-BAL_fascism_ADJ:0 "Baltimarean"
-BAL_democratic_ADJ:0 "Baltimarean"
-BAL_neutrality_ADJ:0 "Baltimarean"
-BAL_communism_ADJ:0 "Baltimarean"
-
-DRG_neutrality:0 "Dragon Tribe"
-DRG_fascism:0 "Dragon Empire"
-DRG_communism:0 "Union of Dragon Communes"
-DRG_democratic:0 "United Dragon Isles"
-DRG_neutrality_DEF:0 "The Dragon Tribe"
-DRG_fascism_DEF:0 "The Dragon Empire"
-DRG_communism_DEF:0 "The Union of Dragon Communes"
-DRG_democratic_DEF:0 "The United Dragon Isles"
-DRG_fascism_ADJ:0 "Draconian"
-DRG_democratic_ADJ:0 "Draconian"
-DRG_neutrality_ADJ:0 "Draconian"
-DRG_communism_ADJ:0 "Draconian"
-
-# North-West
-OLE_neutrality:0 "Olengaard"
-OLE_neutrality_DEF:0 ""
-OLE_fascism:0 ""
-OLE_fascism_DEF:0 ""
-OLE_communism:0 ""
-OLE_communism_DEF:0 ""
-OLE_democratic:0 ""
-OLE_democratic_DEF:0 ""
-OLE_fascism_ADJ:0 ""
-OLE_democratic_ADJ:0 ""
-OLE_neutrality_ADJ:0 ""
-OLE_communism_ADJ:0 ""
+##############label
+# North-West #
+##############
+#OLE in replace/tdr_eaw_countries_overrides_l_english.yml
 
 CIN_neutrality:0 "Cintra"
 CIN_neutrality_DEF:0 ""
@@ -593,20 +526,10 @@ THO_democratic_ADJ:0 ""
 THO_neutrality_ADJ:0 ""
 THO_communism_ADJ:0 ""
 
-# North
-
-YAK_neutrality:0 ""
-YAK_neutrality_DEF:0 ""
-YAK_fascism:0 ""
-YAK_fascism_DEF:0 ""
-YAK_communism:0 ""
-YAK_communism_DEF:0 ""
-YAK_democratic:0 "Crossmountain Republic"
-YAK_democratic_DEF:0 "The Crossmountain Republic"
-YAK_fascism_ADJ:0 "Yak"
-YAK_democratic_ADJ:0 "Yak"
-YAK_neutrality_ADJ:0 "Yak"
-YAK_communism_ADJ:0 "Yak"
+#########label
+# North #
+#########
+#YAK in replace/tdr_eaw_countries_overrides_l_english.yml
 
 TTT_neutrality:0 ""
 TTT_neutrality_DEF:0 ""
@@ -634,18 +557,7 @@ DMD_democratic_ADJ:0 "Dog"
 DMD_neutrality_ADJ:0 "Dog"
 DMD_communism_ADJ:0 "Dog"
 
-PNG_neutrality:0 "Pingland"
-PNG_neutrality_DEF:0 "Kingdom of Pingland"
-PNG_fascism:0 "Pingland"
-PNG_fascism_DEF:0 ""
-PNG_communism:0 "Pingland"
-PNG_communism_DEF:0 ""
-PNG_democratic:0 "Pingland Republic"
-PNG_democratic_DEF:0 "Pingland Republic"
-PNG_fascism_ADJ:0 "Penguin"
-PNG_democratic_ADJ:0 "Penguin"
-PNG_neutrality_ADJ:0 "Penguin"
-PNG_communism_ADJ:0 "Penguin"
+#PNG in replace/tdr_eaw_countries_overrides_l_english.yml
 
 PNR_neutrality:0 "Pingland"
 PNR_neutrality_DEF:0 "Kingdom of Pingland"
@@ -660,9 +572,9 @@ PNR_democratic_ADJ:0 "Penguin"
 PNR_neutrality_ADJ:0 "Penguin"
 PNR_communism_ADJ:0 "Penguin"
 
-
-# Former Nova Griffonia
-
+#########################label
+# Former Nova Griffonia #
+#########################
 MRF_neutrality:0 "Monarchist Restoration Front"
 MRF_neutrality_DEF:0 "Monarchist Restoration Front"
 MRF_fascism:0 "Nova Griffonia"
@@ -689,31 +601,9 @@ GLF_democratic_ADJ:0 "Griffonian"
 GLF_neutrality_ADJ:0 "Griffonian"
 GLF_communism_ADJ:0 "Griffonian"
 
-GRF_neutrality:0 "Monarchist Restoration Front"
-GRF_neutrality_DEF:0 "Monarchist Restoration Front"
-GRF_fascism:0 "Nova Griffonia"
-GRF_fascism_DEF:0 "Nova Griffonian Dictatorship"
-GRF_communism:0 "Griffonian Liberation Front"
-GRF_communism_DEF:0 "Griffonian Liberation Front"
-GRF_democratic:0 ""
-GRF_democratic_DEF:0 ""
-GRF_fascism_ADJ:0 "Griffonian"
-GRF_democratic_ADJ:0 "Griffonian"
-GRF_neutrality_ADJ:0 "Griffonian"
-GRF_communism_ADJ:0 "Griffonian"
+#GRF in replace/tdr_eaw_countries_overrides_l_english.yml
 
-GFF_neutrality:0 "Frontier"
-GFF_neutrality_DEF:0 "Griffonian Frontier"
-GFF_fascism:0 "Frontier"
-GFF_fascism_DEF:0 ""
-GFF_communism:0 "Frontier"
-GFF_communism_DEF:0 ""
-GFF_democratic:0 "Frontier"
-GFF_democratic_DEF:0 ""
-GFF_fascism_ADJ:0 "Griffonian"
-GFF_democratic_ADJ:0 "Griffonian"
-GFF_neutrality_ADJ:0 "Griffonian"
-GFF_communism_ADJ:0 "Griffonian"
+#GFF in replace/tdr_eaw_countries_overrides_l_english.yml
 
 WET_neutrality:0 "Weter"
 WET_neutrality_DEF:0 "City of Weter"
