Added 3 countries, fixed some towns/cities
PLV - Plume Ville
LDC - Lüderclaw
ALH - Alexhafen

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -618,18 +618,44 @@ WET_democratic_ADJ:0 "Griffonian"
 WET_neutrality_ADJ:0 "Griffonian"
 WET_communism_ADJ:0 "Griffonian"
 
-NWN_neutrality:0 "Ny Winghagen"
-NWN_neutrality_DEF:0 "City of Ny Winghagen"
-NWN_fascism:0 "Ny Winghagen"
-NWN_fascism_DEF:0 "Ny Winghagen"
-NWN_communism:0 "Ny Winghagen Commune"
-NWN_communism_DEF:0 "Ny Winghagen Commune"
-NWN_democratic:0 "Ny Winghagen"
-NWN_democratic_DEF:0 "Free City of Ny Winghagen"
-NWN_fascism_ADJ:0 "Griffonian"
-NWN_democratic_ADJ:0 "Griffonian"
-NWN_neutrality_ADJ:0 "Griffonian"
-NWN_communism_ADJ:0 "Griffonian"
+PLV_neutrality:0 "Plume Ville"
+PLV_neutrality_DEF:0 "Plume Ville"
+PLV_fascism:0 "Plume Ville"
+PLV_fascism_DEF:0 "Plume Ville"
+PLV_communism:0 "Plume Ville Commune"
+PLV_communism_DEF:0 "Plume Ville Commune"
+PLV_democratic:0 "Plume Ville"
+PLV_democratic_DEF:0 "Free Plume Ville"
+PLV_fascism_ADJ:0 "Griffonian"
+PLV_democratic_ADJ:0 "Griffonian"
+PLV_neutrality_ADJ:0 "Griffonian"
+PLV_communism_ADJ:0 "Griffonian"
+
+LDC_neutrality:0 "Lüderclaw"
+LDC_neutrality_DEF:0 "City of Lüderclaw"
+LDC_fascism:0 "Lüderclaw"
+LDC_fascism_DEF:0 "Lüderclaw"
+LDC_communism:0 "Lüderclaw Commune"
+LDC_communism_DEF:0 "Lüderclaw Commune"
+LDC_democratic:0 "Lüderclaw"
+LDC_democratic_DEF:0 "Free City of Lüderclaw"
+LDC_fascism_ADJ:0 "Griffonian"
+LDC_democratic_ADJ:0 "Griffonian"
+LDC_neutrality_ADJ:0 "Griffonian"
+LDC_communism_ADJ:0 "Griffonian"
+
+ALH_neutrality:0 "Alexhafen"
+ALH_neutrality_DEF:0 "City of Alexhafen"
+ALH_fascism:0 "Alexhafen"
+ALH_fascism_DEF:0 "Alexhafen"
+ALH_communism:0 "Alexhafen Commune"
+ALH_communism_DEF:0 "Alexhafen Commune"
+ALH_democratic:0 "Alexhafen"
+ALH_democratic_DEF:0 "Free City of Alexhafen"
+ALH_fascism_ADJ:0 "Griffonian"
+ALH_democratic_ADJ:0 "Griffonian"
+ALH_neutrality_ADJ:0 "Griffonian"
+ALH_communism_ADJ:0 "Griffonian"
 
 BFJ_neutrality:0 "Boreasfjord"
 BFJ_neutrality_DEF:0 "City of Boreasfjord"
@@ -643,6 +669,19 @@ BFJ_fascism_ADJ:0 "Griffonian"
 BFJ_democratic_ADJ:0 "Griffonian"
 BFJ_neutrality_ADJ:0 "Griffonian"
 BFJ_communism_ADJ:0 "Griffonian"
+
+NWN_neutrality:0 "Ny Winghagen"
+NWN_neutrality_DEF:0 "City of Ny Winghagen"
+NWN_fascism:0 "Ny Winghagen"
+NWN_fascism_DEF:0 "Ny Winghagen"
+NWN_communism:0 "Ny Winghagen Commune"
+NWN_communism_DEF:0 "Ny Winghagen Commune"
+NWN_democratic:0 "Ny Winghagen"
+NWN_democratic_DEF:0 "Free City of Ny Winghagen"
+NWN_fascism_ADJ:0 "Griffonian"
+NWN_democratic_ADJ:0 "Griffonian"
+NWN_neutrality_ADJ:0 "Griffonian"
+NWN_communism_ADJ:0 "Griffonian"
 
 CNC_neutrality:0 "Northern Cities"
 CNC_neutrality_DEF:0 "Northern Cities"
