--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -820,15 +820,15 @@
  STATE_819:0 "STATE_819"
  STATE_820:0 "STATE_820"
  STATE_821:0 "Sovyenok"
- STATE_822:0 "Starlight's Town"
+ STATE_822:0 "Novocrystalsk"
  STATE_823:0 "STATE_823"
  STATE_824:0 "STATE_824"
  STATE_825:0 "STATE_825"
  STATE_826:0 "STATE_826"
  STATE_827:0 "STATE_827"
- STATE_828:0 "City Up North"
+ STATE_828:0 "Town Up North"
  STATE_829:0 "STATE_829"
- STATE_830:0 "STATE_830"
+ STATE_830:0 "Heringsdorf"
  STATE_831:0 "STATE_831"
  STATE_832:0 "STATE_832"
  STATE_833:0 "STATE_833"
@@ -934,11 +934,11 @@
  STATE_933:0 "STATE_933"
  STATE_934:0 "STATE_934"
  STATE_935:0 "STATE_935"
- STATE_936:0 "STATE_936"
+ STATE_936:0 "Uchte"
  STATE_937:0 "STATE_937"
  STATE_938:0 "STATE_938"
  STATE_939:0 "STATE_939"
- STATE_940:0 "STATE_940"
+ STATE_940:0 "Gänsegeierburg"
  STATE_941:0 "Nieuw Mirabelle"
  STATE_942:0 "STATE_942"
  STATE_943:0 "STATE_943"
@@ -950,20 +950,20 @@
  STATE_949:0 "STATE_949"
  STATE_950:0 "Zerkshed Skäll"
  STATE_951:0 "STATE_951"
- STATE_952:0 "STATE_952"
+ STATE_952:0 "Maarland"
  STATE_953:0 "STATE_953"
  STATE_954:0 "STATE_954"
  STATE_955:0 "Ny Winghagen"
  STATE_956:0 "STATE_956"
  STATE_957:0 "STATE_957"
  STATE_958:0 "STATE_958"
- STATE_959:0 "STATE_959"
+ STATE_959:0 "Klauwitz"
  STATE_960:0 "STATE_960"
  STATE_961:0 "STATE_961"
  STATE_962:0 "STATE_962"
  STATE_963:0 "STATE_963"
- STATE_964:0 "STATE_964"
- STATE_965:0 "STATE_965"
+ STATE_964:0 "Lüderclaw"
+ STATE_965:0 "Plume Ville"
  STATE_966:0 "STATE_966"
  STATE_967:0 "STATE_967"
  STATE_968:0 "STATE_968"
@@ -979,7 +979,7 @@
  STATE_978:0 "STATE_978"
  STATE_979:0 "STATE_979"
  STATE_980:0 "STATE_980"
- STATE_981:0 "STATE_981"
+ STATE_981:0 "Alexhafen"
  STATE_982:0 "STATE_982"
  STATE_983:0 "STATE_983"
  STATE_984:0 "STATE_984"
@@ -1058,7 +1058,7 @@
  STATE_1057:0 "STATE_1057"
  STATE_1058:0 "STATE_1058"
  STATE_1059:0 "STATE_1059"
- STATE_1060:0 "STATE_1060"
+ STATE_1060:0 "Diamondia"
  STATE_1061:0 "STATE_1061"
  STATE_1062:0 "STATE_1062"
  STATE_1063:0 "STATE_1063"
@@ -1214,12 +1214,12 @@
  STATE_1213:0 "Nokhorsag Oi"
  STATE_1214:0 "STATE_1214"
  STATE_1215:0 "STATE_1215"
- STATE_1216:0 "STATE_1216"
+ STATE_1216:0 "Röhrig"
  STATE_1217:0 "STATE_1217"
  STATE_1218:0 "STATE_1218"
  STATE_1219:0 "STATE_1219"
  STATE_1220:0 "Tsasbaatar"
- STATE_1221:0 "STATE_1221"
+ STATE_1221:0 "Bruchhagen"
  STATE_1222:0 "STATE_1222"
  STATE_1223:0 "STATE_1223"
  STATE_1224:0 "STATE_1224"
@@ -1253,7 +1253,7 @@
  STATE_1252:0 "STATE_1252"
  STATE_1253:0 "STATE_1253"
  STATE_1254:0 "Mörön"
- STATE_1255:0 "STATE_1255"
+ STATE_1255:0 "Oatmeal Island"
  STATE_1256:0 "Oin Shiltgeen"
  STATE_1257:0 "Kluv Khot"
  STATE_1258:0 "STATE_1258"
