--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -572,6 +572,32 @@ PNR_democratic_ADJ:0 "Penguin"
 PNR_neutrality_ADJ:0 "Penguin"
 PNR_communism_ADJ:0 "Penguin"
 
+AMN_neutrality:0 "Amundsen"
+AMN_neutrality_DEF:0 "Amundsen"
+AMN_fascism:0 "Amundsen"
+AMN_fascism_DEF:0 "Amundsen"
+AMN_communism:0 "Amundsen"
+AMN_communism_DEF:0 "Amundsen"
+AMN_democratic:0 "Amundsen"
+AMN_democratic_DEF:0 "Amundsen"
+AMN_fascism_ADJ:0 "Penguin"
+AMN_democratic_ADJ:0 "Penguin"
+AMN_neutrality_ADJ:0 "Penguin"
+AMN_communism_ADJ:0 "Penguin"
+
+ALC_neutrality:0 "Undiscovered land"
+ALC_neutrality_DEF:0 "Undiscovered land"
+ALC_fascism:0 "Undiscovered land"
+ALC_fascism_DEF:0 "Undiscovered land"
+ALC_communism:0 "Undiscovered land"
+ALC_communism_DEF:0 "Undiscovered land"
+ALC_democratic:0 "Undiscovered land"
+ALC_democratic_DEF:0 "Undiscovered land"
+ALC_fascism_ADJ:0 "Alicornian"
+ALC_democratic_ADJ:0 "Alicornian"
+ALC_neutrality_ADJ:0 "Alicornian"
+ALC_communism_ADJ:0 "Alicornian"
+
 #########################label
 # Former Nova Griffonia #
 #########################
@@ -695,3 +721,59 @@ CNC_fascism_ADJ:0 "Griffonian"
 CNC_democratic_ADJ:0 "Griffonian"
 CNC_neutrality_ADJ:0 "Griffonian"
 CNC_communism_ADJ:0 "Griffonian"
+
+MOR_neutrality:0 "Morien"
+MOR_neutrality_DEF:0 "Morien"
+MOR_fascism:0 "Morien"
+MOR_fascism_DEF:0 "Morien"
+MOR_communism:0 "Morien"
+MOR_communism_DEF:0 "Morien"
+MOR_democratic:0 "Morien"
+MOR_democratic_DEF:0 "Morien"
+MOR_fascism_ADJ:0 "Dog"
+MOR_democratic_ADJ:0 "Dog"
+MOR_neutrality_ADJ:0 "Dog"
+MOR_communism_ADJ:0 "Dog"
+
+#########################label
+## Not real countries ###
+#########################
+
+TST_fascism:0 "Test Country"
+TST_fascism_DEF:0 "Test Country"
+TST_democratic:0 "Test Country"
+TST_democratic_DEF:0 "Test Country"
+TST_neutrality:1 "Test Country"
+TST_neutrality_DEF:1 "Test Country"
+TST_communism:0 "Test Country"
+TST_communism_DEF:0 "Test Country"
+TST_fascism_ADJ:0 "Test Country"
+TST_democratic_ADJ:0 "Test Country"
+TST_neutrality_ADJ:0 "Test Country"
+TST_communism_ADJ:0 "Test Country"
+
+WLD_fascism:0 "Wilderness"
+WLD_fascism_DEF:0 "Wilderness"
+WLD_democratic:0 "Wilderness"
+WLD_democratic_DEF:0 "Wilderness"
+WLD_neutrality:0 "Wilderness"
+WLD_neutrality_DEF:0 "Wilderness"
+WLD_communism:0 "Wilderness"
+WLD_communism_DEF:0 "Wilderness" 
+WLD_fascism_ADJ:0 "Wild"
+WLD_democratic_ADJ:0 "Wild"
+WLD_neutrality_ADJ:0 "Wild"
+WLD_communism_ADJ:0 "Wild"
+
+WST_fascism:0 "Wasteland"
+WST_fascism_DEF:0 "Wasteland"
+WST_democratic:0 "Wasteland"
+WST_democratic_DEF:0 "Wasteland"
+WST_neutrality:0 "Wasteland"
+WST_neutrality_DEF:0 "Wasteland"
+WST_communism:0 "Wasteland"
+WST_communism_DEF:0 "Wasteland" 
+WST_fascism_ADJ:0 "Unclaimed"
+WST_democratic_ADJ:0 "Unclaimed"
+WST_neutrality_ADJ:0 "Unclaimed"
+WST_communism_ADJ:0 "Unclaimed"
