--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -1028,7 +1028,7 @@
  STATE_1027:0 "STATE_1027"
  STATE_1028:0 "STATE_1028"
  STATE_1029:0 "STATE_1029"
- STATE_1030:0 "STATE_1030"
+ STATE_1030:0 "Undiscovered city"
  STATE_1031:0 "STATE_1031"
  STATE_1032:0 "STATE_1032"
  STATE_1033:0 "STATE_1033"
