Added 10 countries ( Confederacy )
BLS - Bales
MAN - Manehattan
MHT - Manehatan
CNT - Canterbury
NCN - NorthCanterbury
BRI - Bridlepolis
SUM - Summerfield
DPP - Dappleshore
DET - Detrot
STR - Stratusburg

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -150,6 +150,114 @@ PRA_communism_ADJ:0 "Prench"
 
 #ALB in replace/tdr_eaw_countries_overrides_l_english.yml
 
+BLS_neutrality:0 "Bales"
+BLS_neutrality_DEF:0 "Bales"
+BLS_fascism:0 "Bales"
+BLS_fascism_DEF:0 "Bales"
+BLS_communism:0 "Bales"
+BLS_communism_DEF:0 "Bales"
+BLS_democratic:0 "Bales"
+BLS_democratic_DEF:0 "Bales"
+BLS_fascism_ADJ:0 "Bales"
+BLS_democratic_ADJ:0 "Bales"
+BLS_neutrality_ADJ:0 "Bales"
+BLS_communism_ADJ:0 "Bales"
+
+#MAN in replace/tdr_eaw_countries_overrides_l_english.yml
+
+MHT_neutrality:0 "Manehatan"
+MHT_neutrality_DEF:0 "Manehatan"
+MHT_fascism:0 "Manehatan"
+MHT_fascism_DEF:0 "Manehatan"
+MHT_communism:0 "Manehatan"
+MHT_communism_DEF:0 "Manehatan"
+MHT_democratic:0 "Manehatan"
+MHT_democratic_DEF:0 "Manehatan"
+MHT_fascism_ADJ:0 "Manehatan"
+MHT_democratic_ADJ:0 "Manehatan"
+MHT_neutrality_ADJ:0 "Manehatan"
+MHT_communism_ADJ:0 "Manehatan"
+
+CNT_neutrality:0 "Canterbury"
+CNT_neutrality_DEF:0 "Canterbury"
+CNT_fascism:0 "Canterbury"
+CNT_fascism_DEF:0 "Canterbury"
+CNT_communism:0 "Canterbury"
+CNT_communism_DEF:0 "Canterbury"
+CNT_democratic:0 "Canterbury"
+CNT_democratic_DEF:0 "Canterbury"
+CNT_fascism_ADJ:0 "Canterbury"
+CNT_democratic_ADJ:0 "Canterbury"
+CNT_neutrality_ADJ:0 "Canterbury"
+CNT_communism_ADJ:0 "Canterbury"
+
+NCN_neutrality:0 "North Canterbury"
+NCN_neutrality_DEF:0 "North Canterbury"
+NCN_fascism:0 "North Canterbury"
+NCN_fascism_DEF:0 "North Canterbury"
+NCN_communism:0 "North Canterbury"
+NCN_communism_DEF:0 "North Canterbury"
+NCN_democratic:0 "North Canterbury"
+NCN_democratic_DEF:0 "North Canterbury"
+NCN_fascism_ADJ:0 "North Canterbury"
+NCN_democratic_ADJ:0 "North Canterbury"
+NCN_neutrality_ADJ:0 "North Canterbury"
+NCN_communism_ADJ:0 "North Canterbury"
+
+#BRI in replace/tdr_eaw_countries_overrides_l_english.yml
+
+SUM_neutrality:0 "Summerfield"
+SUM_neutrality_DEF:0 "Summerfield"
+SUM_fascism:0 "Summerfield"
+SUM_fascism_DEF:0 "Summerfield"
+SUM_communism:0 "Summerfield"
+SUM_communism_DEF:0 "Summerfield"
+SUM_democratic:0 "Summerfield"
+SUM_democratic_DEF:0 "Summerfield"
+SUM_fascism_ADJ:0 "Summerfield"
+SUM_democratic_ADJ:0 "Summerfield"
+SUM_neutrality_ADJ:0 "Summerfield"
+SUM_communism_ADJ:0 "Summerfield"
+
+DPP_neutrality:0 "Dappleshore"
+DPP_neutrality_DEF:0 "Dappleshore"
+DPP_fascism:0 "Dappleshore"
+DPP_fascism_DEF:0 "Dappleshore"
+DPP_communism:0 "Dappleshore"
+DPP_communism_DEF:0 "Dappleshore"
+DPP_democratic:0 "Dappleshore"
+DPP_democratic_DEF:0 "Dappleshore"
+DPP_fascism_ADJ:0 "Dappleshore"
+DPP_democratic_ADJ:0 "Dappleshore"
+DPP_neutrality_ADJ:0 "Dappleshore"
+DPP_communism_ADJ:0 "Dappleshore"
+
+DET_neutrality:0 "Detrot"
+DET_neutrality_DEF:0 "Detrot"
+DET_fascism:0 "Detrot"
+DET_fascism_DEF:0 "Detrot"
+DET_communism:0 "Detrot"
+DET_communism_DEF:0 "Detrot"
+DET_democratic:0 "Detrot"
+DET_democratic_DEF:0 "Detrot"
+DET_fascism_ADJ:0 "Detrot"
+DET_democratic_ADJ:0 "Detrot"
+DET_neutrality_ADJ:0 "Detrot"
+DET_communism_ADJ:0 "Detrot"
+
+STR_neutrality:0 "Stratusburg"
+STR_neutrality_DEF:0 "Stratusburg"
+STR_fascism:0 "Stratusburg"
+STR_fascism_DEF:0 "Stratusburg"
+STR_communism:0 "Stratusburg"
+STR_communism_DEF:0 "Stratusburg"
+STR_democratic:0 "Stratusburg"
+STR_democratic_DEF:0 "Stratusburg"
+STR_fascism_ADJ:0 "Stratusburg"
+STR_democratic_ADJ:0 "Stratusburg"
+STR_neutrality_ADJ:0 "Stratusburg"
+STR_communism_ADJ:0 "Stratusburg"
+
 ##################label
 # West Equestria #
 ##################
