--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -449,7 +449,7 @@
  STATE_448:0 "STATE_448"
  STATE_449:0 "STATE_449"
  STATE_450:0 "Manehattan"
- STATE_451:0 "STATE_451"
+ STATE_451:0 "Manehatan"
  STATE_452:0 "STATE_452"
  STATE_453:0 "STATE_453"
  STATE_454:0 "Canterbury"
