--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -453,7 +453,7 @@
  STATE_452:0 "STATE_452"
  STATE_453:0 "STATE_453"
  STATE_454:0 "Canterbury"
- STATE_455:0 "Northern Canterbury"
+ STATE_455:0 "North Canterbury"
  STATE_456:0 "Prance"
  STATE_457:0 "STATE_457"
  STATE_458:0 "STATE_458"
