--- a/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 #####################label
-# Equestian company #
+# Equestrian company #
 #####################
 EQS_neutrality:0 "Equestria"
 EQS_neutrality_DEF:0 "Equestria"
@@ -134,6 +134,22 @@ DRG_fascism_ADJ:0 "Draconian"
 DRG_democratic_ADJ:0 "Draconian"
 DRG_neutrality_ADJ:0 "Draconian"
 DRG_communism_ADJ:0 "Draconian"
+
+##############label
+# South-West #
+##############
+LSP_neutrality:0 "Las Pegasus"
+LSP_neutrality_DEF:0 "Las Pegasus"
+LSP_fascism:0 "Las Pegasus"
+LSP_fascism_DEF:0 "Las Pegasus"
+LSP_communism:0 "Las Pegasus"
+LSP_communism_DEF:0 "Las Pegasus"
+LSP_democratic:0 "Las Pegasus"
+LSP_democratic_DEF:0 "Las Pegasus"
+LSP_fascism_ADJ:0 "Las Pegasusian"
+LSP_democratic_ADJ:0 "Las Pegasusian"
+LSP_neutrality_ADJ:0 "Las Pegasusian"
+LSP_communism_ADJ:0 "Las Pegasusian"
 
 ##############label
 # North-West #
